<resources>
    <string name="app_name">Reptile Haven</string>

    <!-- General Buttons -->
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="delete">DELETE</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign Out</string>
    <string name="send">Send</string>


    <!-- Picture Dialog -->
    <string name="open_camera">Open Camera</string>
    <string name="select_gallery">Select from Gallery</string>

    <!-- Reptile Information -->
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="age">Age</string>
    <string name="description">Description</string>

    <!-- Trading Post -->
    <string name="add_trade_title_string">Title</string>
    <string name="add_trade_price_string">Price</string>
    <string name="add_trade_description_string">Useful Information for the buyer.</string>
    <string name="add_trade_post_button_string">Post</string>
    <string name="trade_post_reptile_name_string">Reptile Name</string>
    <string name="trade_post_show_more_string">Show More</string>
    <string name="trade_post_owner_name_string">Owner Name</string>
    <string name="trade_post_date_string">Date</string>
    <string name="trade_post_show_less_string">Show Less</string>
    <string name="trade_post_contact_seller_string">Contact Seller</string>

    <!-- Profile Fragment -->
    <string name="address">Address</string>
    <string name="address_hint">Insert Address here</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">Insert Phone Number here</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="privacy_hint">Allow sharing of phone number \nand address</string>
    <string name="profile_name_hint">Insert Name here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_generator">QR Generator</string>
    <string name="qr_scanner">QR Scanner</string>
</resources>