<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".ui.features.profile.ProfileEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="50dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_head"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:onClick="onProfileImageClicked"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="2dp"
                    app:srcCompat="@drawable/ic_baseline_add_a_photo_24"
                    tools:src="@drawable/ic_add_picture" />

                <EditText
                    android:id="@+id/ed_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_head"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/profile_name_hint"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ed_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#ACABAB"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="User Email ID here" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_rounded_top"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:id="@+id/tv_phone_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/ed_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_phone_title"
                        android:layout_marginTop="10dp"
                        android:inputType= "phone"
                        android:hint="@string/phone_number_hint"
                        android:textColor="#ACABAB"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:id="@+id/tv_address_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/ed_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_address_title"
                        android:layout_marginTop="10dp"
                        android:hint="@string/address_hint"
                        android:textColor="#ACABAB"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp">

                    <TextView
                        android:id="@+id/tv_privacy_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_setting"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_privacy_title"
                        android:layout_marginTop="10dp"
                        android:hint="@string/privacy_hint"
                        android:textColor="#ACABAB"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/sp_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/privacys"
                        android:layout_alignParentRight="true"
                        android:layout_alignBottom="@id/tv_privacy"/>

                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_save"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/save"
                        android:onClick="onProfileSaveClicked"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_cancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:text="@string/cancel"
                        android:onClick="onProfileCancelClicked"/>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>